src/style.css
* {
	padding: 0;
	margin: 0;
	font-family: Arial, Helvetica, sans-serif;
}

#root {
	width: 100vw;
	height: 100vh;
	overflow: hidden;
	/* Known Issue: If items exceed a certain amount, the rest of the items are cut off and can't see the app-footer */
	background-color: #CCC;
}

#app {
	background-color: #EEE;
	margin: 20px auto;
	width: 40vw;
	border-radius: 10px;
	display: flex;
	flex-direction: column;
	align-items: center;
}

#app-title {
	text-align: center;
}

#app-body {
	width: 90%;
	display: flex;
	flex-direction: column;
	align-items: center;
}

#app-title {
	padding: 20px;
}

#addItemForm {
	width: 100%;
}

#itemInput {
	width: 100%;
	font-size: 1.5rem;
	padding: 0.7rem;
	box-sizing: border-box;
	background-color: #FFF;
	border: 1px solid black;
	margin: 0;
	margin-bottom: 1rem;
}

#todoItemsContainer {
	width: 100%;
}

.todoItem {
	/* margin: 1rem 0; */
	border-bottom: 1px solid #000;
	width: 100%;
	padding: 1rem 0;
}

.todoItemLabel {
	margin: 1rem;
}

#app-footer {
	width: 100%;
	box-sizing: border-box;
	background-color: lightgreen;
	border: 1px solid #DDD;
	padding: 1rem;
	display: flex;
	justify-content: center;
	border-radius: 0 0 10px 10px;
}

#app-footer>* {
	border-right: 1px solid grey;
}

#actionsContainer {
	width: 25%;
	display: flex;
	flex-direction: row;
	justify-content: space-around;
}

.iconButton:hover {
	cursor:pointer;
}

#itemsRemaining {
	width: 50%;
	text-align: center;
	padding: 3px 0px;
}

#sortingOptions {
	width: 50%;
	display: flex;
	flex-direction: row;
	justify-content: space-around;
}

.sortingButton {
	color: black;
	text-decoration: none;
	box-sizing: border-box;
	padding: 3px 10px;
	border: 1px solid transparent;
}

.sortingButton:hover {
	cursor: pointer;
}

.sortingButton.active {
	border: 1px solid #777;
}

.todoItem {
	display: flex;
	justify-content: space-between;
}

